Fixed some spacing issues

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -42,6 +42,7 @@ html {
 body {
     background-color: var(--white-smoke);
     margin: 0;
+    width: auto;
 }
 
 .main-containers {
@@ -70,27 +71,30 @@ a:hover {
 
 
 /* Header section */
+header {
+    width: auto;
+}
+
 nav {
     background-color: var(--platinum);
     width: auto;
     display: flex;
     justify-content: space-between;
-    padding: 0 4rem;
+    /*padding: 0 4rem;*/
     border-bottom: 0.5rem solid var(--pumpkin);
 }
 
-ul {
-    padding-left: 0;
+.header_container {
+    padding-top: 1rem;
     display: flex;
     list-style-type: none;
-
 }
 
 #nav-right {
     justify-content: right;
 }
 
-li {
+.header_links {
     padding: 0.4rem;
 }
 
@@ -116,7 +120,10 @@ main {
 }
 
 .main-containers {
-    padding: 0 6rem;
+    padding-left: 6rem;
+    padding-right: 6rem;
+    padding-bottom: 2rem;
+    height: auto;
 }
 
 .alternate-container {
@@ -144,4 +151,18 @@ footer {
     padding: 2rem;
     margin-top: 2rem;
     background-color: var(--platinum);
+}
+
+
+/* Mobile / Desktop */
+@media only screen and (max-width: 480px) {
+    body {
+        width: auto;
+    }
+
+    nav {
+        padding: 0;
+        text-wrap: normal;
+        justify-content: left;
+    }
 }
